crates/squealy-macros/tests/compile_fail/field_must_use_column_type.rs
use squealy::*;

#[derive(Table)]
struct Widget<'scope, C: ColumnMode = ColumnExpr> {
    id: C::Type<'scope, i32>,
    name: String,
}

fn main() {}
